# lazy-mock-server

./: .air.toml  .gitignore  .golangci.yml  Dockerfile  Makefile  README.md  generate_cert.sh  go.mod  main.go  pyproject.toml  requirements.txt  start_go_mock_server.sh  start_go_mock_server_https.sh  start_py_mock_server.sh  start_py_mock_server_poetry.sh  startup.sh  test_https.sh
.github/workflows/: ci.yml
app/: mock_response.yaml  mock_server.py
config/: mock_config.yaml
doc/: api.md  refactoring.md
internal/config/: config.go  config_test.go
internal/handlers/: handlers.go  handlers_test.go
internal/logger/: logger.go  logger_test.go
internal/server/: server.go  server_test.go
internal/templates/: web_ui.html
tests/: __init__.py  test_mock_server.py
